add pages javascript

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Single Page Aplication | Javascript Vanilla | API Javascript</title>
   </head>
-  <body></body>
+  <body>
+    <main id="main" class="main">
+      <header id="header" class="header">
+        <nav id="nav" class="nav"></nav>
+      </header>
+
+      <section id="content" class="content">
+        <div class=""></div>
+      </section>
+    </main>
+  </body>
 </html>
